# pulido

./: LICENSE  README.md  glossary.example.json  pulido.py  pyproject.toml
assets/src/: demo.html  hero-banner.html  hero.html
raycast/: pulido-clean.sh  pulido-mode.sh  pulido-prompt.sh
tests/: test_pulido.py
